More work on the external plugins. !gaem disabled

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 # ircleibot
-SRCS = datastructs/linkedlist.c agenda.c cli.c greeter.c strutils.c botcmd.c globals.c events.c shell.c votings.c logger.c main.c			# ficheiros .c
-HDRS = datastructs/linkedlist.h agenda.h cli.h greeter.h strutils.h botcmd.h globals.h events.h shell.h votings.h logger.h				# ficheiros .h
+SRCS = external.c datastructs/linkedlist.c agenda.c cli.c greeter.c strutils.c botcmd.c globals.c events.c shell.c votings.c logger.c main.c			# ficheiros .c
+HDRS = external.h datastructs/linkedlist.h agenda.h cli.h greeter.h strutils.h botcmd.h globals.h events.h shell.h votings.h logger.h				# ficheiros .h
 PROG = ircleibot			# executavel
 CC = gcc
 #
