More work on external "plugins"

--- a/src/external.conf
+++ b/src/external.conf
@@ -1,8 +1,9 @@
+!echo CONF DEBUG: %s
 # This is a ircleibot configuration
 # You can add bot commands that will call
 # the shell. Specify where to put the command
 # By putting %s. The %s is for now mandatory...
 
-!grep       + pcregrep -i '%s' chatlog.txt | tail -n 1
-!fortune    + fortune -os | tr '\n' ' ' && echo %s > /dev/null
-!google     + echo "http://google.com/search?q=`cat '%s' | tr ' ' '%20'`"
+!grep + pcregrep -i '%s' chatlog.txt | tail -n 1
+!fortune + fortune -os | tr '\n' ' ' && echo %s > /dev/null
+!google + echo "http://google.com/search?q=`cat '%s' | tr ' ' '%20'`"
