External configuration things now done...

--- a/src/external.conf
+++ b/src/external.conf
@@ -1,4 +1,4 @@
-!echo CONF DEBUG: %s
+!echo + echo CONF DEBUG: %s
 # This is a ircleibot configuration
 # You can add bot commands that will call
 # the shell. Specify where to put the command
