--- a/src/external.conf
+++ b/src/external.conf
@@ -1,9 +1,27 @@
-!echo + echo CONF DEBUG: %s
 # This is a ircleibot configuration
 # You can add bot commands that will call
-# the shell. Specify where to put the command
-# By putting %s. The %s is for now mandatory...
+# the shell. Specify where to put the arguments 
+# by putting %s. This only applies if the command
+# accepts arguments...
+# Syntax:
+#
+# ![botcmd] [permission][n_args] [shell_commnad]
+#
+# botcmd -> The command the bot will answer to
+# permission -> The command permission
+#                * Everyone can run this command
+#                + Voices and ops can run this command
+#                @ Only ops can run this command
+# n_args -> The number the arguments the bot command will
+#   will accept. Can be 0 or 1.
+# shell_command -> The command to execute upon bot command
+#   invocation.
 
-!grep + pcregrep -i '%s' chatlog.txt | tail -n 1
-!fortune + fortune -os | tr '\n' ' ' && echo %s > /dev/null
-!google + echo "http://google.com/search?q=`cat '%s' | tr ' ' '%20'`"
+!grep +1 pcregrep -i '%s' chatlog.txt | tail -n 1
+!fortune +0 fortune -os | tr '\n' ' '
+!google +1 echo "http://google.com/search?q=`echo \"%s\" | sed -e 's/ /%%20/g'`"
+!ping +0 echo "!pong"
+!wikipt +1 echo "http://pt.wikipedia.org/`echo \"%s\" | sed -e 's/ /%%20/g'`"
+!wiki +1 echo "http://en.wikipedia.org/`echo \"%s\" | sed -e 's/ /%%20/g'`"
+!game +0 echo "You just lost it"
+!pau +0 echo ".|."
