Major overhaul in external plugins codebase

--- a/src/external.conf
+++ b/src/external.conf
@@ -17,11 +17,11 @@
 # shell_command -> The command to execute upon bot command
 #   invocation.
 
-!grep +1 pcregrep -i '%s' chatlog.txt | tail -n 1
-!fortune +0 fortune -os | tr '\n' ' '
-!google +1 echo "http://google.com/search?q=`echo \"%s\" | sed -e 's/ /%%20/g'`"
-!ping +0 echo "!pong"
-!wikipt +1 echo "http://pt.wikipedia.org/`echo \"%s\" | sed -e 's/ /%%20/g'`"
-!wiki +1 echo "http://en.wikipedia.org/`echo \"%s\" | sed -e 's/ /%%20/g'`"
-!game +0 echo "You just lost it"
-!pau +0 echo ".|."
+!grep + pcregrep -i '$BOTARGS' chatlog.txt | tail -n 1
+!fortune + fortune -os | tr '\n' ' '
+!google + echo "http://google.com/search?q=`echo \"$BOTARGS\" | sed -e 's/ /%20/g'`"
+!ping + echo "!pong"
+!wikipt + echo "http://pt.wikipedia.org/`echo \"$BOTARGS\" | sed -e 's/ /%20/g'`"
+!wiki + echo "http://en.wikipedia.org/`echo \"$BOTARGS\" | sed -e 's/ /%20/g'`"
+!game + echo "You just lost it"
+!pau + echo ".|."
