External plugins done

--- a/src/external.conf
+++ b/src/external.conf
@@ -25,3 +25,4 @@
 !wiki + echo "http://en.wikipedia.org/`echo \"$BOTARGS\" | sed -e 's/ /%20/g'`"
 !game + echo "You just lost it"
 !pau + echo ".|."
+!callall + echo $BOTNAMES
