--- a/src/external.conf
+++ b/src/external.conf
@@ -21,8 +21,8 @@
 !fortune + fortune -os | tr '\n' ' '
 !google + echo "http://google.com/search?q=`echo \"$BOTARGS\" | sed -e 's/ /%20/g'`"
 !ping + echo "!pong"
-!wikipt + echo "http://pt.wikipedia.org/`echo \"$BOTARGS\" | sed -e 's/ /%20/g'`"
-!wiki + echo "http://en.wikipedia.org/`echo \"$BOTARGS\" | sed -e 's/ /%20/g'`"
+!wikipt + echo "http://pt.wikipedia.org/wiki/`echo \"$BOTARGS\" | sed -e 's/ /_/g'`"
+!wiki + echo "http://en.wikipedia.org/wiki/`echo \"$BOTARGS\" | sed -e 's/ /_/g'`"
 !game + echo "You just lost it"
 !pau + echo ".|."
 !callall + echo $BOTNAMES
