--- a/src/external.conf
+++ b/src/external.conf
@@ -17,7 +17,7 @@
 # shell_command -> The command to execute upon bot command
 #   invocation.
 
-!grep + pcregrep -i '$BOTARGS' chatlog.txt | tail -n 1
+!grep + pcregrep -i "$BOTARGS" chatlog.txt | tail -n 1
 !fortune + fortune -os | tr '\n' ' '
 !google + echo "http://google.com/search?q=`echo \"$BOTARGS\" | sed -e 's/ /%20/g'`"
 !ping + echo "!pong"
