Added new plugins. Did some bugfixes. Added GPLv3 notice

--- a/src/external.conf
+++ b/src/external.conf
@@ -1,8 +1,4 @@
 # This is a ircleibot configuration
-# You can add bot commands that will call
-# the shell. Specify where to put the arguments 
-# by putting %s. This only applies if the command
-# accepts arguments...
 # Syntax:
 #
 # ![botcmd] [permission][n_args] [shell_commnad]
@@ -12,12 +8,16 @@
 #                * Everyone can run this command
 #                + Voices and ops can run this command
 #                @ Only ops can run this command
-# n_args -> The number the arguments the bot command will
-#   will accept. Can be 0 or 1.
 # shell_command -> The command to execute upon bot command
 #   invocation.
-
-!grep + pcregrep -i "$BOTARGS" chatlog.txt | tail -n 1
+#
+# You can use the following environment variables in your
+# commands:
+# 
+# $BOTARGS - The arguments passed to the bot command
+#
+#
+!grep + bash plugins/botc_grep.sh "$BOTARGS"
 !fortune + fortune -os | tr '\n' ' '
 !google + echo "http://google.com/search?q=`echo \"$BOTARGS\" | sed -e 's/ /%20/g'`"
 !ping + echo "!pong"
