New external commands added. Some internal removed

--- a/src/external.conf
+++ b/src/external.conf
@@ -26,3 +26,5 @@
 !game + echo "You just lost it"
 !pau + echo ".|."
 !callall + echo $BOTNAMES
+!uvaprobs @ cd plugins; bash botc_uvaprobs.sh "$BOTARGS"
+!fib @ cd plugins; bash botc_fib.sh "$BOTARGS"
