Some changes in the external plugins...

--- a/src/external.conf
+++ b/src/external.conf
@@ -27,4 +27,4 @@
 !pau + echo ".|."
 !callall + echo $BOTNAMES
 !uvaprobs @ cd plugins; bash botc_uvaprobs.sh "$BOTARGS"
-!fib @ cd plugins; bash botc_fib.sh "$BOTARGS"
+# !fib @ cd plugins; bash botc_fib.sh "$BOTARGS"
